--- a/style.css
+++ b/style.css
@@ -63,5 +63,12 @@ body {
 @media screen and (min-width: 768px) {
     .botoes {
       display: flex;
-    }
+    
+}
+.botao:first-child {
+    border-radius: 40px 0 0 0;
+  }
+  .botao:last-child {
+    border-radius: 0 40px 0 0;
+  }
   }
